@@ -6,4 +6,15 @@ json_serializable_serialize_property transfer_ownership="1"
 json_construct_gobject transfer_ownership="1"
 json_serialize_gobject transfer_ownership="1"
 json_serialize_gobject.length is_out="1"
+json_array_add_element.node transfer_ownership="1"
+json_array_get_elements hidden="1"
+json_node_copy transfer_ownership="1"
+json_node_dup_array transfer_ownership="1"
+json_node_dup_object transfer_ownership="1"
+json_node_dup_string transfer_ownership="1"
+json_node_take_array.array transfer_ownership="1"
+json_node_take_object.object transfer_ownership="1"
+json_object_get_members hidden="1"
+json_object_get_values hidden="1"
+json_object_add_member.node transfer_ownership="1"
 
